--- a/databags/alternatives.ini
+++ b/databags/alternatives.ini
@@ -15,3 +15,9 @@ direction = text-left
 order = order-last
 url = /es/
 language = Español (es)
+
+[fr]
+direction = text-left
+order = order-last
+url = /fr/
+language = Français (fr)
