--- a/databags/menu+en.ini
+++ b/databags/menu+en.ini
@@ -1,25 +1,31 @@
 [about]
 path = https://www.torproject.org/about/overview.html.en
 label = About
+translate = True
 
 [documentation]
 path = https://www.torproject.org/docs/documentation.html.en
 label = Documentation
+translate = True
 
 [press]
 path = https://www.torproject.org/press/press.html.en
 label = Press
+translate = True
 
 [blog]
 path = https://blog.torproject.org
 label = Blog
+translate = True
 
 [newsletter]
 path = https://newsletter.torproject.org
 label = Newsletter
+translate = True
 
 [contact]
 path = https://www.torproject.org/about/contact.html.en
 label = Contact
+translate = True
 
 
