add all completed translations

--- a/databags/alternatives.ini
+++ b/databags/alternatives.ini
@@ -4,6 +4,30 @@ order = order-last
 url =  /
 language = English (en)
 
+[bn]
+direction = text-left
+order = order-last
+url = /bn/
+language = বাংলা ভাষা (bn)
+
+[ca]
+direction = text-left
+order = order-last
+url = /ca/
+language = Català (ca)
+
+[de]
+direction = text-left
+order = order-last
+url = /de/
+language = Deutsch (de)
+
+[el]
+direction = text-left
+order = order-last
+url = /el/
+language = Ελληνικά (el)
+
 [en-US]
 direction = text-left
 order = order-last
@@ -16,8 +40,81 @@ order = order-last
 url = /es/
 language = Español (es)
 
+[es-AR]
+direction = text-left
+order = order-last
+url = /es-AR/
+language = Español Argentina(es_AR)
+
 [fr]
 direction = text-left
 order = order-last
 url = /fr/
 language = Français (fr)
+
+[ga]
+direction = text-left
+order = order-last
+url = /ga/
+language = Gaeilge (ga)
+
+[he]
+direction = text-left
+order = order-last
+url = /he/
+language = עברית (ivrit)
+
+[hr]
+direction = text-left
+order = order-last
+url = /he/
+language = Croatian (hr)
+
+[id]
+direction = text-left
+order = order-last
+url = /id/
+language = Indonesia (id)
+
+[it]
+direction = text-left
+order = order-last
+url = /it/
+language = Italiano (it)
+
+[ka]
+direction = text-left
+order = order-last
+language = Georgian (ka)
+url = /ka/
+
+[pt-BR]
+direction = text-left
+order = order-last
+url = /pt-BR/
+language = Português (pt-BR)
+
+[ru]
+direction = text-left
+order = order-last
+url = /ru/
+language = Русский (ru)
+
+[sv]
+direction = text-left
+order = order-last
+url = /tr/
+language = Swedish (sv)
+
+[tr]
+direction = text-left
+order = order-last
+url = /tr/
+language = Türkçe (tr)
+
+[zh-CN]
+direction = text-left
+order = order-last
+url = /zh-CN/
+language = 简体字 (zh-CN)
+
