--- a/configs/i18n.ini
+++ b/configs/i18n.ini
@@ -1,4 +1,4 @@
 content = en
 translations = bn,ca,de,el,en-US,es,fr,ga,he,id,it,ka,pt-BR,ru,tr,zh-CN
 i18npath = i18n
-translate_paragraphwise = True
+translate_paragraphwise = False
