--- a/databags/alternatives.ini
+++ b/databags/alternatives.ini
@@ -4,10 +4,10 @@ order = order-last
 url =  /
 language = English (en)
 
-[bn]
+[bn-BD]
 direction = text-left
 order = order-last
-url = /bn/
+url = /bn-BD/
 language = বাংলা ভাষা (bn)
 
 [ca]
@@ -44,7 +44,7 @@ language = Español (es)
 direction = text-left
 order = order-last
 url = /es-AR/
-language = Español Argentina(es_AR)
+language = Español Arg. (es_AR)
 
 [fr]
 direction = text-left
@@ -67,7 +67,7 @@ language = עברית (ivrit)
 [hr]
 direction = text-left
 order = order-last
-url = /he/
+url = /hr/
 language = Croatian (hr)
 
 [id]
