add macedonian and croatian

--- a/configs/i18n.ini
+++ b/configs/i18n.ini
@@ -1,4 +1,4 @@
 content = en-US
-translations = bn-BD,ca,de,el,es,fr,ga,he,id,it,ka,pt-BR,ru,tr,zh-CN
+translations = bn-BD,ca,de,el,es,es-AR,fr,ga,he,hr,id,it,ka,mk,pt-BR,ru,tr,zh-CN
 i18npath = i18n
 translate_paragraphwise = False
