--- a/databags/alternatives.ini
+++ b/databags/alternatives.ini
@@ -88,6 +88,12 @@ order = order-last
 language = Georgian (ka)
 url = /ka/
 
+[mk]
+direction = text-left
+order = order-last
+language = Macedonian (mk)
+url = /mk/
+
 [pt-BR]
 direction = text-left
 order = order-last
