add en-US locale

--- a/databags/alternatives.ini
+++ b/databags/alternatives.ini
@@ -1,8 +1,8 @@
-[en]
+[en-US]
 direction = text-left
 order = order-last
 url =  /
-language = English (en)
+language = English (en-US)
 
 [bn-BD]
 direction = text-left
@@ -32,7 +32,7 @@ language = Ελληνικά (el)
 direction = text-left
 order = order-last
 url =  /en-US/
-language = English (en)
+language = English (en-US)
 
 [es]
 direction = text-left
