Add PT, Bridges and Known Issues to sidebar (#28484)

--- a/databags/topics+en.ini
+++ b/databags/topics+en.ini
@@ -10,9 +10,17 @@ label = Downloading
 path = running-tor-browser
 label = Running Tor Browser For The First Time
 
+[transports]
+path = transports
+label = Pluggable Transports
+
 [circumvention]
 path = circumvention
 label = Circumvention
+
+[bridges]
+path = bridges
+label = Bridges
 
 [managing-identities]
 path = managing-identities
@@ -45,6 +53,10 @@ label = Troubleshooting
 [uninstalling]
 path = uninstalling
 label = Uninstalling
+
+[known-issues]
+path = known-issues
+label = Known Issues
 
 [becoming-tor-translator]
 path = becoming-tor-translator
