--- a/databags/topics+en.ini
+++ b/databags/topics+en.ini
@@ -49,3 +49,7 @@ label = Uninstalling
 [becoming-tor-translator]
 path = becoming-tor-translator
 label = Becoming a Tor Translator
+
+[messaging]
+path = messaging
+label = Instant Messaging
