add more languages, needs a better solution to symlink languages, or language negotiation as in #28499

--- a/databags/topics+es.ini
+++ b/databags/topics+es.ini
@@ -1,1 +1,63 @@
-topics+en.ini
+[about]
+path = about
+label = About Tor Browser
+
+[downloading]
+path = downloading
+label = Downloading
+
+[running-tor-browser]
+path = running-tor-browser
+label = Running Tor Browser For The First Time
+
+[transports]
+path = transports
+label = Pluggable Transports
+
+[circumvention]
+path = circumvention
+label = Circumvention
+
+[bridges]
+path = bridges
+label = Bridges
+
+[managing-identities]
+path = managing-identities
+label = Managing Identities
+
+[onion-services]
+path = onion-services
+label = Onion Services
+
+[secure-connections]
+path = secure-connections
+label = Secure Connections
+
+[security-slider]
+path = security-slider
+label = Security Slider
+
+[updating]
+path = updating
+label = Updating
+
+[plugins]
+path = plugins
+label = Plugins
+
+[troubleshooting]
+path = troubleshooting
+label = Troubleshooting
+
+[uninstalling]
+path = uninstalling
+label = Uninstalling
+
+[known-issues]
+path = known-issues
+label = Known Issues
+
+[becoming-tor-translator]
+path = becoming-tor-translator
+label = Becoming a Tor Translator
