--- a/configs/i18n.ini
+++ b/configs/i18n.ini
@@ -1,4 +1,4 @@
 content = en-US
-translations = bn-BD,ca,de,el,en,es,es-AR,fr,ga,id,it,ka,mk,pt-BR,ru,tr,zh-CN
+translations = bn-BD,bn-IN,ca,de,el,en,es,es-AR,es-ES,fr,ga,id,it,ka,mk,pt-BR,ru,tr,zh-CN
 i18npath = i18n
 translate_paragraphwise = False
