--- a/configs/i18n.ini
+++ b/configs/i18n.ini
@@ -1,4 +1,5 @@
 content = en-US
 translations = bn-BD,bn-IN,ca,de,el,en,es,es-AR,es-ES,fr,ga,id,it,ka,mk,pt-BR,ru,tr,zh-CN
 i18npath = i18n
+url_prefix = https://tb-manual.torproject.org/
 translate_paragraphwise = False
