--- a/configs/i18n.ini
+++ b/configs/i18n.ini
@@ -1,5 +1,5 @@
 content = en-US
-translations = bn-BD,bn-IN,ca,de,el,en,es,es-AR,es-ES,fr,ga,id,it,ka,mk,pt-BR,ru,tr,zh-CN
+translations = ar,bg,bn-BD,bn-IN,ca,cs,da,de,el,en,es,es-AR,es-ES,fa,fr,ga,hr,id,it,ka,mk,nb-NO,nl,pt-BR,ru,sv-SE,tr,uk,vi,zh-CN
 i18npath = i18n
 url_prefix = https://tb-manual.torproject.org/
 translate_paragraphwise = False
