caps use in synch with the titles, so it gets translated

--- a/databags/topics+en.ini
+++ b/databags/topics+en.ini
@@ -8,11 +8,11 @@ label = Downloading
 
 [running-tor-browser]
 path = running-tor-browser
-label = Running Tor Browser For The First Time
+label = Running Tor Browser for the first time
 
 [transports]
 path = transports
-label = Pluggable Transports
+label = Pluggable transports
 
 [circumvention]
 path = circumvention
@@ -24,7 +24,7 @@ label = Bridges
 
 [managing-identities]
 path = managing-identities
-label = Managing Identities
+label = Managing identities
 
 [onion-services]
 path = onion-services
@@ -56,7 +56,7 @@ label = Uninstalling
 
 [known-issues]
 path = known-issues
-label = Known Issues
+label = Known issues
 
 [becoming-tor-translator]
 path = becoming-tor-translator
