--- a/databags/alternatives.ini
+++ b/databags/alternatives.ini
@@ -88,6 +88,12 @@ order = order-last
 url = /ga/
 language = Gaeilge (ga)
 
+[he]
+direction = text-right
+order = order-first
+url = /he/
+language = עברית (he)
+
 [hr]
 direction = text-left
 order = order-last
