add Romanian language

--- a/databags/alternatives.ini
+++ b/databags/alternatives.ini
@@ -142,6 +142,12 @@ order = order-last
 url = /pt-BR/
 language = Português (pt-BR)
 
+[ro]
+direction = text-left
+order = order-last
+url = /ro/
+language = Română (ro)
+
 [ru]
 direction = text-left
 order = order-last
