add Icelandic and Hungarian language

--- a/databags/alternatives.ini
+++ b/databags/alternatives.ini
@@ -100,11 +100,23 @@ order = order-last
 url = /hr/
 language = Hrvatski (hr)
 
+[hu]
+direction = text-left
+order = order-last
+url = /hu/
+language = Magyar nyelv (hu)
+
 [id]
 direction = text-left
 order = order-last
 url = /id/
 language = Indonesia (id)
+
+[is]
+direction = text-left
+order = order-last
+url = /is/
+language = Íslenska (is)
 
 [it]
 direction = text-left
