--- a/configs/i18n.ini
+++ b/configs/i18n.ini
@@ -1,5 +1,5 @@
 content = en-US
-translations = ar,bg,bn-BD,bn-IN,ca,cs,da,de,el,en,es,es-AR,es-ES,fa,fr,ga,he,hr,hu,id,is,it,ka,mk,nb-NO,nl,pt-BR,ro,ru,sv-SE,tr,uk,vi,zh-CN
+translations = ar,bn-BD,bg,ca,cs,da,de,el,en,es,es-AR,fa,fr,ga,he,hr,hu,id,is,it,ka,mk,nb-NO,nl,pt-BR,ro,ru,sv-SE,tr,uk,vi,zh-CN
 i18npath = i18n
 url_prefix = https://tb-manual.torproject.org/
 translate_paragraphwise = False
