--- a/.htaccess
+++ b/.htaccess
@@ -1,3 +1,3 @@
 RewriteEngine on
-RewriteRule /security-slider.html$   /security-slider/
-RewriteRule /secure-connections.html$   /secure-connections/
+RewriteRule ^/security-slider.html$   /security-slider/
+RewriteRule ^/secure-connections.html$   /secure-connections/
