add Arabic language

--- a/databags/alternatives.ini
+++ b/databags/alternatives.ini
@@ -4,6 +4,12 @@ order = order-last
 url =  /
 language = English (en-US)
 
+[ar]
+direction = text-right
+order = order-first
+url = /ar/
+language = عربية (ar)
+
 [bn-BD]
 direction = text-left
 order = order-last
