add Korean language

--- a/databags/alternatives.ini
+++ b/databags/alternatives.ini
@@ -130,6 +130,12 @@ order = order-last
 language = Georgian (ka)
 url = /ka/
 
+[ko]
+direction = text-left
+order = order-last
+language = 한국어 (ko)
+url = /ko/
+
 [mk]
 direction = text-left
 order = order-last
