--- a/.htaccess
+++ b/.htaccess
@@ -1,3 +1,15 @@
-# we have only one translation for this file
-RewriteRule ^bn-BD(.+)$ /bn$1 [R=302,L]
-RewriteRule ^bn-IN(.+)$ /bn$1 [R=302,L]
+RewriteEngine On
+
+RewriteRule ^en-US(.*) $1 [R=302,L]
+
+# forward requests in /en to the root folder
+RewriteRule ^en(.*) $1 [R=302,L]
+
+# Rewrites for languages that have a different mapping in the page
+RewriteRule ^es-ES(.*) /es$1 [R=302,L]
+RewriteRule ^es-AR(.*) /es$1 [R=302,L]
+
+# Rewrites for languages that have a Tor Browser release
+# but don't have a support page
+
+RewriteRule ^(cs|da|fa|he|hu|is|ja|ko|nb-NO|nl|pl|sv-SE|vi|zh-TW)(.*) $2 [R=302,L]
