--- a/.htaccess
+++ b/.htaccess
@@ -5,6 +5,9 @@ RewriteRule ^en-US(.*) $1 [R=302,L]
 # forward requests in /en to the root folder
 RewriteRule ^en(.*) $1 [R=302,L]
 
+# support for old URLs
+RewriteRule ^(.*)/security-slider.html$ $1/security-slider [R=302,L]
+
 # Rewrites for languages that have a different mapping in the page
 RewriteRule ^es-ES(.*) /es$1 [R=302,L]
 RewriteRule ^es-AR(.*) /es$1 [R=302,L]
