more htaccess changes

--- a/.htaccess
+++ b/.htaccess
@@ -6,8 +6,6 @@ RewriteRule ^en-US/(.*)$ /$1 [R=302,L]
 RewriteRule ^en/(.*)$ /$1 [R=302,L]
 RewriteRule ^en / [R=302,L]
 
-# support for old URLs
-RewriteRule ^(.*)/security-slider.html$ $1/security-slider [R=302,L]
 
 # Rewrites for languages that have a different mapping in the page
 RewriteRule ^es-ES/(.*)$ /es/$1 [R=302,L]
@@ -18,3 +16,6 @@ RewriteRule ^es-AR/(.*)$ /es/$1 [R=302,L]
 
 RewriteRule ^(cs|da|fa|he|hu|is|ja|ko|nb-NO|nl|pl|sv-SE|vi|zh-TW)/(.*)$ /$1 [R=302,L]
 RewriteRule ^(cs|da|fa|he|hu|is|ja|ko|nb-NO|nl|pl|sv-SE|vi|zh-TW)$ / [R=302,L]
+
+# support for old URLs
+RewriteRule ^(.*)/security-slider.html$ $1/security-slider/ [R=302,L]
