add new topic to the sidebar

--- a/databags/topics+en.ini
+++ b/databags/topics+en.ini
@@ -34,6 +34,10 @@ label = Onion Services
 path = secure-connections
 label = Secure Connections
 
+[security-settings]
+path = security-settings
+label = Security Settings
+
 [security-slider]
 path = security-slider
 label = Security Slider
