remove duplicated langs and put them on .htaccess to save resources when compiling

--- a/databags/alternatives.ini
+++ b/databags/alternatives.ini
@@ -16,10 +16,10 @@ order = order-last
 url = /bg/
 language = Български (bg)
 
-[bn-BD]
+[bn]
 direction = text-left
 order = order-last
-url = /bn-BD/
+url = /bn/
 language = বাংলা ভাষা (bn)
 
 [ca]
