remove duplicated langs and put them on .htaccess to save resources when compiling

--- a/databags/alternatives.ini
+++ b/databags/alternatives.ini
@@ -10,10 +10,16 @@ order = order-first
 url = /ar/
 language = عربية (ar)
 
-[bn-BD]
+[bg]
 direction = text-left
 order = order-last
-url = /bn-BD/
+url = /bg/
+language = Български (bg)
+
+[bn]
+direction = text-left
+order = order-last
+url = /bn/
 language = বাংলা ভাষা (bn)
 
 [ca]
