--- a/.htaccess
+++ b/.htaccess
@@ -1,21 +1,24 @@
 RewriteEngine On
 
-RewriteRule ^en-US/(.*)$ /$1 [R=302,L]
+RewriteRule ^en-US/(.+)$ /$1 [R=302,L]
 
 # forward requests in /en to the root folder
-RewriteRule ^en/(.*)$ /$1 [R=302,L]
+RewriteRule ^en/(.+)$ /$1 [R=302,L]
 RewriteRule ^en / [R=302,L]
 
 
 # Rewrites for languages that have a different mapping in the page
-RewriteRule ^es-ES/(.*)$ /es/$1 [R=302,L]
-RewriteRule ^es-AR/(.*)$ /es/$1 [R=302,L]
+RewriteRule ^es-ES/(.+)$ /es/$1 [R=302,L]
+RewriteRule ^es-AR/(.+)$ /es/$1 [R=302,L]
 
 # support for old URLs
-RewriteRule ^(.*)/security-slider.html$ /$1/security-slider/ [R=302,L]
+RewriteRule ^(.+)/security-slider.html$ /$1/security-slider/ [R=302,L]
 
 # Rewrites for languages that have a Tor Browser release
 # but don't have a translated manual
 
-RewriteRule ^(cs|da|fa|he|hu|is|ja|ko|nb-NO|nl|pl|sv-SE|vi|zh-TW)/(.*)$ /$1 [R=302,L]
+RewriteRule ^(cs|da|fa|he|hu|is|ja|ko|nb-NO|nl|pl|sv-SE|vi|zh-TW)/(.+)$ /$1 [R=302,L]
 RewriteRule ^(cs|da|fa|he|hu|is|ja|ko|nb-NO|nl|pl|sv-SE|vi|zh-TW)$ / [R=302,L]
+# we have only one translation for this file
+RewriteRule ^bn-BD(.+)$ /bn$1 [302,L]
+RewriteRule ^bn-IN(.+)$ /bn$1 [302,L]
