--- a/databags/menu+en.ini
+++ b/databags/menu+en.ini
@@ -1,5 +1,5 @@
 [about]
-path = https://www.torproject.org/about/history
+path = https://www.torproject.org/about/history/
 label = About
 translate = True
 
@@ -27,5 +27,3 @@ translate = True
 path = https://www.torproject.org/contact/
 label = Contact
 translate = True
-
-
