--- a/.htaccess
+++ b/.htaccess
@@ -22,5 +22,5 @@ RewriteRule ^(cs|da|fa|he|hu|is|ja|ko|nb-NO|nl|pl|sv-SE|vi|zh-TW)(.*) $1 [R=302,
 RewriteRule ^(.*)/security-slider.html$ $1/security-slider/ [R=302,L]
 
 # we have only one translation for this file
-RewriteRule ^bn-BD(.+)$ /bn$1 [302,L]
-RewriteRule ^bn-IN(.+)$ /bn$1 [302,L]
+RewriteRule ^bn-BD(.+)$ /bn$1 [R=302,L]
+RewriteRule ^bn-IN(.+)$ /bn$1 [R=302,L]
