updated navigation bar

--- a/databags/menu+en.ini
+++ b/databags/menu+en.ini
@@ -1,5 +1,5 @@
 [about]
-path = https://www.torproject.org/about/overview.html.en
+path = https://www.torproject.org/about/history
 label = About
 translate = True
 
@@ -9,7 +9,7 @@ label = Documentation
 translate = True
 
 [press]
-path = https://www.torproject.org/press/press.html.en
+path = https://www.torproject.org/press/
 label = Press
 translate = True
 
@@ -24,7 +24,7 @@ label = Newsletter
 translate = True
 
 [contact]
-path = https://www.torproject.org/about/contact.html.en
+path = https://www.torproject.org/contact/
 label = Contact
 translate = True
 
