add japanese language

--- a/databags/alternatives.ini
+++ b/databags/alternatives.ini
@@ -124,6 +124,12 @@ order = order-last
 url = /it/
 language = Italiano (it)
 
+[ja]
+direction = text-left
+order = order-last
+url = /ja/
+language = 日本語 (ja)
+
 [ka]
 direction = text-left
 order = order-last
