--- a/configs/i18n.ini
+++ b/configs/i18n.ini
@@ -1,5 +1,5 @@
 content = en-US
-translations = ar,bn,bg,ca,cs,da,de,el,en,es,es-AR,fa,fr,ga,he,hr,hu,id,is,it,ka,ko,mk,nb-NO,nl,pt-BR,ro,ru,sv-SE,tr,uk,vi,zh-CN
+translations = ar,bn,bg,ca,cs,da,de,el,en,es,es-AR,fa,fr,ga,he,hr,hu,id,is,it,ja,ka,ko,mk,nb-NO,nl,pt-BR,ro,ru,sv-SE,tr,uk,vi,zh-CN
 i18npath = i18n
 url_prefix = https://tb-manual.torproject.org/
 translate_paragraphwise = False
