add Română language

--- a/databags/alternatives.ini
+++ b/databags/alternatives.ini
@@ -178,6 +178,12 @@ order = order-last
 url = /ro/
 language = Română (ro)
 
+[ro]
+direction = text-left
+order = order-last
+url = /ro/
+language = Română (ro)
+
 [ru]
 direction = text-left
 order = order-last
