--- a/.htaccess
+++ b/.htaccess
@@ -8,7 +8,7 @@ RewriteRule ^en / [R=302,L]
 
 
 # Rewrites for languages that have a different mapping in the page
-RewriteRule ^(es-ES|es-AR|es-MX|es-CO)(.+)$ /es$2 [R=302,L]
+RewriteRule ^(es-ES|es-AR|es-MX|es-CO)$ /es$2 [R=302,L]
 
 # support for old URLs
 RewriteRule ^(.+)/security-slider.html$ /$1/security-slider/ [R=302,L]
