--- a/.htaccess
+++ b/.htaccess
@@ -10,7 +10,7 @@ RewriteRule ^en(.*) $1 [R=302,L]
 RewriteRule ^(es-ES|es-AR|es-MX|es-CO)(.*) /es$1 [R=302,L]
 
 # support for old URLs
-RewriteRule ^(.+)/security-slider.html$ /$1/security-slider/ [R=302,L]
+RewriteRule ^/security-slider.html.$ /$1/security-slider/ [R=302,L]
 
 # Rewrites for languages that have a Tor Browser release
 # but don't have a translated manual
