--- a/.htaccess
+++ b/.htaccess
@@ -1,10 +1,9 @@
 RewriteEngine On
 
-RewriteRule ^en-US/(.+)$ /$1 [R=302,L]
+RewriteRule ^en-US$ /$2 [R=302,L]
 
 # forward requests in /en to the root folder
-RewriteRule ^en/(.+)$ /$1 [R=302,L]
-RewriteRule ^en / [R=302,L]
+RewriteRule ^en$ /$1 [R=302,L]
 
 
 # Rewrites for languages that have a different mapping in the page
