--- a/.htaccess
+++ b/.htaccess
@@ -1,16 +1,16 @@
 RewriteEngine On
 
-RewriteRule ^en-US$ /$2 [R=302,L]
+RewriteRule ^en-US$ /$1 [R=302,L]
 
 # forward requests in /en to the root folder
 RewriteRule ^en$ /$1 [R=302,L]
 
 
 # Rewrites for languages that have a different mapping in the page
-RewriteRule ^(es-ES|es-AR|es-MX|es-CO)$ /es$2 [R=302,L]
+RewriteRule ^(es-ES|es-AR|es-MX|es-CO)$ /es/$1 [R=302,L]
 
 # support for old URLs
-RewriteRule ^/security-slider.html.$ /$2/security-slider/ [R=302,L]
+RewriteRule ^/security-slider.html(.+) /$1/security-slider/ [R=302,L]
 
 # Rewrites for languages that have a Tor Browser release
 # but don't have a translated manual
