--- a/.htaccess
+++ b/.htaccess
@@ -1,7 +1,8 @@
 RewriteEngine On
 
 # support for old URLs
-RewriteRule ^security-slider.html(.*) /$1/security-slider/ [R=302,L]
+RewriteRule ^security-slider.html$ $1/security-slider/ [R=302,L]
+RewriteRule ^security-slider.html.(.*) $1/security-slider/ [R=302,L]
 
 RewriteRule ^en-US(.*) $1 [R=302,L]
 
@@ -10,7 +11,7 @@ RewriteRule ^en(.*) $1 [R=302,L]
 
 
 # Rewrites for languages that have a different mapping in the page
-RewriteRule ^(es-ES|es-MX|es-CO)(.+) /es$2 [R=302,L]
+RewriteRule ^(es-ES|es-MX|es-CO)(.*) es$2 [R=302,L]
 
 # Rewrites for languages that have a Tor Browser release
 # but don't have a translated manual
