add Portuguese from Portugal, almost complete!

--- a/databags/alternatives.ini
+++ b/databags/alternatives.ini
@@ -164,7 +164,13 @@ language = Nederlands (nl)
 direction = text-left
 order = order-last
 url = /pt-BR/
-language = Português (pt-BR)
+language = Português Br. (pt-BR)
+
+[pt-PT]
+direction = text-left
+order = order-last
+url = /pt-PT/
+language = Português Port. (pt-PT)
 
 [ro]
 direction = text-left
