--- a/databags/alternatives.ini
+++ b/databags/alternatives.ini
@@ -10,6 +10,12 @@ order = order-first
 url = /ar/
 language = عربية (ar)
 
+[bg]
+direction = text-left
+order = order-last
+url = /bg/
+language = Български (bg)
+
 [bn]
 direction = text-left
 order = order-last
