--- a/.htaccess
+++ b/.htaccess
@@ -4,10 +4,9 @@ RewriteEngine On
 RewriteRule ^(.*)/security-slider.html$ /$1/security-slider/ [R=302,L]
 RewriteRule ^security-slider.html$ /security-slider/ [R=302,L]
 
-RewriteRule ^en-US(.*) $1 [R=302,L]
-
 # forward requests in /en to the root folder
-RewriteRule ^en(.*) $1 [R=302,L]
+RewriteRule ^(en-US|en)$ / [R=302,L]
+RewriteRule ^(en-US|en)/(.*) /$1 [R=302,L]
 
 # Rewrites for languages that have a different mapping in the page
 RewriteRule ^(es-ES|es-MX|es-CO)$ /es [R=302,L]
