--- a/.htaccess
+++ b/.htaccess
@@ -19,5 +19,5 @@ RewriteRule ^(cs|da|fa|he|hu|is|ja|ko|nb-NO|nl|pl|sv-SE|vi|zh-TW)$ /$1 [R=302,L]
 RewriteRule ^(cs|da|fa|he|hu|is|ja|ko|nb-NO|nl|pl|sv-SE|vi|zh-TW)/(.*) /$2 [R=302,L]
 
 # we have only one translation for this locales
-RewriteRule ^bn-BD(.*) /bn$1 [R=302,L]
-RewriteRule ^bn-IN(.*) /bn$1 [R=302,L]
+RewriteRule ^bn-(BD|IN)$ /bn [R=302,L]
+RewriteRule ^bn-(BD|IN)/(.*) /bn/$1 [R=302,L]
