add Polish lang

--- a/databags/alternatives.ini
+++ b/databags/alternatives.ini
@@ -160,6 +160,12 @@ order = order-last
 url = /nl/
 language = Nederlands (nl)
 
+[pl]
+direction = text-left
+order = order-last
+url = /pl/
+language = polski (pl)
+
 [pt-BR]
 direction = text-left
 order = order-last
