clean up en-US cause now it is a forward

--- a/configs/i18n.ini
+++ b/configs/i18n.ini
@@ -1,4 +1,4 @@
-content = en-US
+content = en
 translations = ar,bn,bg,ca,cs,da,de,el,es,es-AR,fa,fr,ga,he,hr,hu,id,is,it,ja,ka,ko,mk,nb-NO,nl,pl,pt-BR,pt-PT,ro,ru,sv-SE,tr,uk,vi,zh-CN
 i18npath = i18n
 url_prefix = https://tb-manual.torproject.org/
