same order than others, only ltr

--- a/databags/alternatives.ini
+++ b/databags/alternatives.ini
@@ -6,7 +6,7 @@ language = English (en-US)
 
 [ar]
 direction = text-right
-order = order-first
+order = order-last
 url = /ar/
 language = عربية (ar)
 
@@ -66,7 +66,7 @@ language = Español Arg. (es_AR)
 
 [fa]
 direction = text-right
-order = order-first
+order = order-last
 url = /fa/
 language = فارسی (fa)
 
@@ -84,7 +84,7 @@ language = Gaeilge (ga)
 
 [he]
 direction = text-right
-order = order-first
+order = order-last
 url = /he/
 language = עברית (he)
 
