--- a/.htaccess
+++ b/.htaccess
@@ -6,7 +6,7 @@ RewriteRule ^security-slider.html$ /security-slider/ [R=302,L]
 
 # forward requests in /en to the root folder
 RewriteRule ^(en-US|en)$ / [R=302,L]
-RewriteRule ^(en-US|en)/(.*) /$1 [R=302,L]
+RewriteRule ^(en-US|en)/(.*) /$2 [R=302,L]
 
 # Rewrites for languages that have a different mapping in the page
 RewriteRule ^(es-ES|es-MX|es-CO)$ /es [R=302,L]
@@ -15,7 +15,7 @@ RewriteRule ^(es-ES|es-MX|es-CO)/(.*) /es/$2 [R=302,L]
 # Rewrites for languages that have a Tor Browser release
 # but don't have a translated manual
 # this languages are the priority for translation of the Tor Browser User Manual!
-RewriteRule ^(cs|da|fa|he|hu|is|ja|ko|nb-NO|nl|pl|sv-SE|vi|zh-TW)$ /$1 [R=302,L]
+RewriteRule ^(cs|da|fa|he|hu|is|ja|ko|nb-NO|nl|pl|sv-SE|vi|zh-TW)$ / [R=302,L]
 RewriteRule ^(cs|da|fa|he|hu|is|ja|ko|nb-NO|nl|pl|sv-SE|vi|zh-TW)/(.*) /$2 [R=302,L]
 
 # we have only one translation for this locales
