--- a/configs/i18n.ini
+++ b/configs/i18n.ini
@@ -1,5 +1,5 @@
-content = en-US
-translations = ar,bn,ca,de,el,en,es,fr,ga,id,it,ka,mk,pt-BR,ro,ru,tr,zh-CN
+content = en
+translations = ar,bn,ca,de,el,es,fr,ga,id,it,ka,mk,pt-BR,ro,ru,tr,zh-CN
 i18npath = i18n
 url_prefix = https://tb-manual.torproject.org/
 translate_paragraphwise = False
