add is, he, pt-PT langs

--- a/databags/alternatives.ini
+++ b/databags/alternatives.ini
@@ -50,7 +50,7 @@ language = Español (es)
 direction = text-left
 order = order-last
 url = /es-AR/
-language = Español Arg. (es_AR)
+language = Español Arg. (es-AR)
 
 [fr]
 direction = text-left
@@ -64,6 +64,12 @@ order = order-last
 url = /ga/
 language = Gaeilge (ga)
 
+[he]
+direction = text-right
+order = order-last
+url = /he/
+language = עברית (he)
+
 [id]
 direction = text-left
 order = order-last
@@ -75,6 +81,12 @@ direction = text-left
 order = order-last
 url = /it/
 language = Italiano (it)
+
+[is]
+direction = text-left
+order = order-last
+url = /is/
+language = Íslenska (is)
 
 [ka]
 direction = text-left
@@ -93,6 +105,12 @@ direction = text-left
 order = order-last
 url = /pt-BR/
 language = Português (pt-BR)
+
+[pt-PT]
+direction = text-left
+order = order-last
+url = /pt-PT/
+language = Português Port. (pt-PT)
 
 [ro]
 direction = text-left
