add Thai language

--- a/databags/alternatives.ini
+++ b/databags/alternatives.ini
@@ -184,6 +184,12 @@ order = order-last
 url = /sv-SE/
 language = Svenska (sv)
 
+[th]
+direction = text-left
+order = order-last
+url = /th/
+language = ภาษาไทย (th)
+
 [tr]
 direction = text-left
 order = order-last
