--- a/configs/i18n.ini
+++ b/configs/i18n.ini
@@ -1,5 +1,5 @@
 content = en
-translations = ar,bn,ca,de,el,es,fr,ga,he,id,is,it,ka,mk,pt-BR,pt-PT,ro,ru,tr,zh-CN
+translations = ar,bn,ca,de,el,es,fr,ga,he,id,is,it,ka,mk,pt-BR,pt-PT,ro,ru,th,tr,zh-CN
 i18npath = i18n
 url_prefix = https://tb-manual.torproject.org/
 translate_paragraphwise = False
