--- a/.htaccess
+++ b/.htaccess
@@ -4,8 +4,8 @@ RewriteRule ^(en-US|en)$ / [R=302,L]
 RewriteRule ^(en-US|en)/(.*) /$2 [R=302,L]
 
 # Rewrites for languages that have a different mapping in the page
-RewriteRule ^(es-ES|es-AR|es-MXres-CO)$ /es/ [R=302,L]
-RewriteRule ^(es-ES|es-AR|es-MXres-CO)/(.*) /es/$2 [R=302,L]
+RewriteRule ^(es-ES|es-MXres-CO)$ /es/ [R=302,L]
+RewriteRule ^(es-ES|es-MXres-CO)/(.*) /es/$2 [R=302,L]
 
 # support for old URLs
 RewriteRule ^/security-slider.html$ /security-slider/ [R=302,L]
@@ -14,8 +14,8 @@ RewriteRule ^(.*)/security-slider.html$ /$1/security-slider/ [R=302,L]
 # Rewrites for languages that have a Tor Browser release
 # but don't have a translated manual
 # this languages are the priority for translation of the Tor Browser User Manual!
-RewriteRule ^(cs|da|fa|hu|ja|ko|nb-NO|nl|pl|sv-SE|vi|zh-TW)$ / [R=302,L]
-RewriteRule ^(cs|da|fa|hu|ja|ko|nb-NO|nl|pl|sv-SE|vi|zh-TW)/(.*) /$2 [R=302,L]
+RewriteRule ^(hu|ja|pl|zh-TW)$ / [R=302,L]
+RewriteRule ^(hu|ja|pl|zh-TW)/(.*) /$2 [R=302,L]
 
 # we have only one translation for this locales
 RewriteRule ^bn-(BD|IN)$ /bn [R=302,L]
