changed name of chinese locale as per translators suggestion

--- a/databags/alternatives.ini
+++ b/databags/alternatives.ini
@@ -212,5 +212,5 @@ language  = українська (uk)
 direction = text-left
 order = order-last
 url = /zh-CN/
-language = 简体字 (zh-CN)
+language = 简体中文 (zh-CN)
 
