add Thai translation

--- a/databags/alternatives.ini
+++ b/databags/alternatives.ini
@@ -124,6 +124,12 @@ order = order-last
 url = /ru/
 language = Русский (ru)
 
+[th]
+direction = text-left
+order = order-last
+url = /th/
+language = ภาษาไทย (th)
+
 [tr]
 direction = text-left
 order = order-last
