Use menu databags from lego

--- a/databags/menu+en.ini
+++ b/databags/menu+en.ini
@@ -1,31 +1,1 @@
-[about]
-path = https://www.torproject.org/about/history/
-label = About
-translate = True
-
-[documentation]
-path = https://www.torproject.org/docs/documentation.html.en
-label = Documentation
-translate = True
-
-[press]
-path = https://www.torproject.org/press/
-label = Press
-translate = True
-
-[blog]
-path = https://blog.torproject.org
-label = Blog
-translate = True
-
-[newsletter]
-path = https://newsletter.torproject.org
-label = Newsletter
-translate = True
-
-[contact]
-path = https://www.torproject.org/contact/
-label = Contact
-translate = True
-
-
+../lego/databags/menu+en.ini
