--- a/.htaccess
+++ b/.htaccess
@@ -4,9 +4,9 @@ RewriteEngine On
 RewriteRule ^(.*)/security-slider.html$ /$1/security-settings/ [R=302,L]
 RewriteRule ^security-slider.html$ /security-settings/ [R=302,L]
 
-# support for old URLs
-RewriteRule ^(.*)/security-settings.html$ /$1/security-settings/ [R=302,L]
-RewriteRule ^security-settings.html$ /security-settings/ [R=302,L]
+# this document moved to the community portal
+RewriteRule ^(.*)/becoming-tor-translator$ https://community.torproject.org/$1/localization/becoming-tor-translator/ [R=302,L]
+RewriteRule ^becoming-tor-translator$ https://community.torproject.org/becoming-tor-translator/ [R=302,L]
 
 # forward requests in /en to the root folder
 RewriteRule ^(en-US|en)$ / [R=302,L]
