--- a/databags/topics+en.ini
+++ b/databags/topics+en.ini
@@ -6,6 +6,10 @@ label = About Tor Browser
 path = downloading
 label = Downloading
 
+[installation]
+path = installation
+label = Installation
+
 [running-tor-browser]
 path = running-tor-browser
 label = Running Tor Browser for the first time
@@ -57,6 +61,10 @@ label = Uninstalling
 [known-issues]
 path = known-issues
 label = Known issues
+
+[make-tor-portable]
+path = [make-tor-portable]
+label = Making Tor Browser portable
 
 [becoming-tor-translator]
 path = becoming-tor-translator
