Fix broken url make-tor-portable

--- a/databags/topics+en.ini
+++ b/databags/topics+en.ini
@@ -63,7 +63,7 @@ path = known-issues
 label = Known issues
 
 [make-tor-portable]
-path = [make-tor-portable]
+path = make-tor-portable
 label = Making Tor Browser portable
 
 [becoming-tor-translator]
