--- a/.htaccess
+++ b/.htaccess
@@ -5,8 +5,8 @@ RewriteRule ^(.*)/security-slider.html$ /$1/security-settings/ [R=302,L]
 RewriteRule ^security-slider.html$ /security-settings/ [R=302,L]
 
 # this document moved to the community portal
-RewriteRule ^(.*)/becoming-tor-translator$ https://community.torproject.org/localization/becoming-tor-translator/ [R=302,L]
-RewriteRule ^becoming-tor-translator/$ https://community.torproject.org/localization/becoming-tor-translator/ [R=302,L]
+RewriteRule ^(.*)/becoming-tor-translator https://community.torproject.org/localization/becoming-tor-translator/ [R=302,L]
+RewriteRule ^becoming-tor-translator https://community.torproject.org/localization/becoming-tor-translator/ [R=302,L]
 
 # forward requests in /en to the root folder
 RewriteRule ^(en-US|en)$ / [R=302,L]
