add ml, ms, zh-TW, hr, hu langs to staging for translations review

--- a/databags/alternatives.ini
+++ b/databags/alternatives.ini
@@ -88,6 +88,18 @@ order = order-last
 url = /he/
 language = עברית (he)
 
+[hr]
+direction = text-right
+order = order-last
+url = /hr/
+language = hrvatski (hr)
+
+[hu]
+direction = text-right
+order = order-last
+url = /hu/
+language = Magyar nyelv (hu)
+
 [id]
 direction = text-left
 order = order-last
@@ -124,11 +136,23 @@ order = order-last
 language = 한국어 (ko)
 url = /ko/
 
+[ml]
+direction = text-left
+order = order-last
+language = മലയാളം  (ml)
+url = /ml/
+
 [mk]
 direction = text-left
 order = order-last
 language = Macedonian (mk)
 url = /mk/
+
+[ms]
+direction = text-left
+order = order-last
+language = Bahasa Melayu (ms)
+url = /ms/
 
 [nb-NO]
 direction = text-left
@@ -213,4 +237,10 @@ direction = text-left
 order = order-last
 url = /zh-CN/
 language = 简体中文 (zh-CN)
+
+[zh-TW]
+direction = text-left
+order = order-last
+url = /zh-TW/
+language = 正體字 (zh-TW)
 
