Prevent 404 when new locales users click on browser links.

--- a/.htaccess
+++ b/.htaccess
@@ -19,8 +19,8 @@ RewriteRule ^(es-ES|es-MX|es-CO)/(.*) /es/$2 [R=302,L]
 # Rewrites for languages that have a Tor Browser release
 # but don't have a translated manual
 # this languages are the priority for translation of the Tor Browser User Manual!
-RewriteRule ^(cs|da|fa|hu|ja|ko|nb-NO|nl|pl|sv-SE|vi|zh-TW)$ / [R=302,L]
-RewriteRule ^(cs|da|fa|hu|ja|ko|nb-NO|nl|pl|sv-SE|vi|zh-TW)/(.*) /$2 [R=302,L]
+RewriteRule ^(cs|da|fa|hu|ja|ko|ms|lt|nb-NO|nl|pl|sv-SE|vi|zh-TW)$ / [R=302,L]
+RewriteRule ^(cs|da|fa|hu|ja|ko|ms|lt|nb-NO|nl|pl|sv-SE|vi|zh-TW)/(.*) /$2 [R=302,L]
 
 # we have only one translation for this locales
 RewriteRule ^bn-(BD|IN)$ /bn [R=302,L]
