--- a/databags/alternatives.ini
+++ b/databags/alternatives.ini
@@ -6,9 +6,15 @@ language = English (en-US)
 
 [ar]
 direction = text-right
-order = order-first
+order = order-last
 url = /ar/
 language = عربية (ar)
+
+[bg]
+direction = text-left
+order = order-last
+url = /bg/
+language = Български (bg)
 
 [bn]
 direction = text-left
@@ -22,6 +28,18 @@ order = order-last
 url = /ca/
 language = Català (ca)
 
+[cs]
+direction = text-left
+order = order-last
+url = /cs/
+language = česky (cs)
+
+[da]
+direction = text-left
+order = order-last
+url = /da/
+language = Dansk (da)
+
 [de]
 direction = text-left
 order = order-last
@@ -34,12 +52,6 @@ order = order-last
 url = /el/
 language = Ελληνικά (el)
 
-[en-US]
-direction = text-left
-order = order-last
-url =  /en-US/
-language = English (en-US)
-
 [es]
 direction = text-left
 order = order-last
@@ -51,6 +63,12 @@ direction = text-left
 order = order-last
 url = /es-AR/
 language = Español Arg. (es-AR)
+
+[fa]
+direction = text-right
+order = order-last
+url = /fa/
+language = فارسی (fa)
 
 [fr]
 direction = text-left
@@ -70,11 +88,29 @@ order = order-last
 url = /he/
 language = עברית (he)
 
+[hr]
+direction = text-right
+order = order-last
+url = /hr/
+language = hrvatski (hr)
+
+[hu]
+direction = text-right
+order = order-last
+url = /hu/
+language = Magyar nyelv (hu)
+
 [id]
 direction = text-left
 order = order-last
 url = /id/
 language = Indonesia (id)
+
+[is]
+direction = text-left
+order = order-last
+url = /is/
+language = Íslenska (is)
 
 [it]
 direction = text-left
@@ -94,17 +130,65 @@ order = order-last
 language = Georgian (ka)
 url = /ka/
 
+[ko]
+direction = text-left
+order = order-last
+language = 한국어 (ko)
+url = /ko/
+
+[lt]
+direction = text-left
+order = order-last
+language = lietuvių (lt)
+url = /lt/
+
+[ml]
+direction = text-left
+order = order-last
+language = മലയാളം  (ml)
+url = /ml/
+
 [mk]
 direction = text-left
 order = order-last
-language = Macedonian (mk)
+language = македонски (mk)
 url = /mk/
+
+[ms]
+direction = text-left
+order = order-last
+language = Melayu (ms)
+url = /ms/
+
+[nb-NO]
+direction = text-left
+order = order-last
+language = Norsk bokmål (nb-NO)
+url = /nb-NO/
+
+[nl]
+direction = text-left
+order = order-last
+url = /nl/
+language = Nederlands (nl)
+
+[pl]
+direction = text-left
+order = order-last
+url = /pl/
+language = polski (pl)
 
 [pt-BR]
 direction = text-left
 order = order-last
 url = /pt-BR/
-language = Português (pt-BR)
+language = Português Br. (pt-BR)
+
+[pt-PT]
+direction = text-left
+order = order-last
+url = /pt-PT/
+language = Português Port. (pt-PT)
 
 [pt-PT]
 direction = text-left
@@ -124,6 +208,12 @@ order = order-last
 url = /ru/
 language = Русский (ru)
 
+[sv-SE]
+direction = text-left
+order = order-last
+url = /sv-SE/
+language = Svenska (sv)
+
 [th]
 direction = text-left
 order = order-last
@@ -136,9 +226,26 @@ order = order-last
 url = /tr/
 language = Türkçe (tr)
 
+[vi]
+direction = text-left
+order = order-last
+url = /vi/
+language  = Tiếng Việt (vi)
+
+[uk]
+direction = text-left
+order = order-last
+url = /uk/
+language  = українська (uk)
+
 [zh-CN]
 direction = text-left
 order = order-last
 url = /zh-CN/
 language = 简体中文 (zh-CN)
 
+[zh-TW]
+direction = text-left
+order = order-last
+url = /zh-TW/
+language = 正體字 (zh-TW)
