more small corrections in lang names

--- a/databags/alternatives.ini
+++ b/databags/alternatives.ini
@@ -104,7 +104,7 @@ language = Magyar nyelv (hu)
 direction = text-left
 order = order-last
 url = /id/
-language = Indonesia (id)
+language = bahasa Indonesia (id)
 
 [is]
 direction = text-left
@@ -127,7 +127,7 @@ language = Íslenska (is)
 [ka]
 direction = text-left
 order = order-last
-language = Georgian (ka)
+language = ქართული ენა (ka)
 url = /ka/
 
 [ko]
