--- a/databags/alternatives.ini
+++ b/databags/alternatives.ini
@@ -6,7 +6,7 @@ language = English (en-US)
 
 [ar]
 direction = text-right
-order = order-first
+order = order-last
 url = /ar/
 language = عربية (ar)
 
@@ -74,7 +74,7 @@ language = עברית (he)
 direction = text-left
 order = order-last
 url = /id/
-language = Indonesia (id)
+language = bahasa Indonesia (id)
 
 [it]
 direction = text-left
@@ -91,20 +91,20 @@ language = Íslenska (is)
 [ka]
 direction = text-left
 order = order-last
-language = Georgian (ka)
+language = ქართული ენა (ka)
 url = /ka/
 
 [mk]
 direction = text-left
 order = order-last
-language = Macedonian (mk)
+language = македонски (mk)
 url = /mk/
 
 [pt-BR]
 direction = text-left
 order = order-last
 url = /pt-BR/
-language = Português (pt-BR)
+language = Português Br. (pt-BR)
 
 [pt-PT]
 direction = text-left
