add japanese, lithuanian, correct some langnames

--- a/databags/alternatives.ini
+++ b/databags/alternatives.ini
@@ -124,10 +124,16 @@ order = order-last
 url = /is/
 language = Íslenska (is)
 
+[ja]
+direction = text-left
+order = order-last
+language = 日本語 (ja)
+url = /ja/
+
 [ka]
 direction = text-left
 order = order-last
-language = Georgian (ka)
+language = ქართული ენა (ka)
 url = /ka/
 
 [ko]
@@ -135,6 +141,12 @@ direction = text-left
 order = order-last
 language = 한국어 (ko)
 url = /ko/
+
+[lt]
+direction = text-left
+order = order-last
+language = lietuvių (lt)
+url = /lt/
 
 [ml]
 direction = text-left
@@ -145,13 +157,13 @@ url = /ml/
 [mk]
 direction = text-left
 order = order-last
-language = Macedonian (mk)
+language = македонски (mk)
 url = /mk/
 
 [ms]
 direction = text-left
 order = order-last
-language = Bahasa Melayu (ms)
+language = Melayu (ms)
 url = /ms/
 
 [nb-NO]
@@ -243,4 +255,3 @@ direction = text-left
 order = order-last
 url = /zh-TW/
 language = 正體字 (zh-TW)
-
