update to last master

--- a/databags/alternatives.ini
+++ b/databags/alternatives.ini
@@ -104,7 +104,7 @@ language = Magyar nyelv (hu)
 direction = text-left
 order = order-last
 url = /id/
-language = Indonesia (id)
+language = bahasa Indonesia (id)
 
 [is]
 direction = text-left
@@ -189,12 +189,6 @@ direction = text-left
 order = order-last
 url = /pt-BR/
 language = Português Br. (pt-BR)
-
-[pt-PT]
-direction = text-left
-order = order-last
-url = /pt-PT/
-language = Português Port. (pt-PT)
 
 [pt-PT]
 direction = text-left
