--- a/configs/i18n.ini
+++ b/configs/i18n.ini
@@ -1,5 +1,5 @@
 content = en
-translations = ar,bg,bn,ca,cs,de,el,es,fa,fr,ga,he,hr,hu,id,is,it,ja,ka,ko,ml,ms,mk,nl,pl,pt-BR,pt-PT,ro,ru,sv-SE,th,tr,uk,vi,zh-CN,zh-TW
+translations = ar,bg,bn,ca,cs,de,el,es,fa,fr,ga,he,hr,hu,id,is,it,ja,ka,ko,lt,ml,ms,mk,nl,pl,pt-BR,pt-PT,ro,ru,sv-SE,th,tr,uk,vi,zh-CN,zh-TW
 i18npath = i18n
 url_prefix = https://tb-manual.torproject.org/
 translate_paragraphwise = False
