add Lithuanian translation

--- a/databags/alternatives.ini
+++ b/databags/alternatives.ini
@@ -94,6 +94,12 @@ order = order-last
 language = ქართული ენა (ka)
 url = /ka/
 
+[lt]
+direction = text-left
+order = order-last
+language = lietuvių (lt)
+url = /lt/
+
 [mk]
 direction = text-left
 order = order-last
