Mobile Tor topic

--- a/databags/topics+en.ini
+++ b/databags/topics+en.ini
@@ -66,6 +66,10 @@ label = Known issues
 path = make-tor-portable
 label = Making Tor Browser portable
 
+[mobile-tor]
+path = mobile-tor
+label = Mobile Tor
+
 [becoming-tor-translator]
 path = becoming-tor-translator
 label = Becoming a Tor Translator
