--- a/databags/topics.ini
+++ b/databags/topics.ini
@@ -62,6 +62,10 @@ label = Troubleshooting
 path = known-issues
 label = Known issues
 
+[mobile-tor]
+path = mobile-tor
+label = Mobile Tor
+
 [becoming-tor-translator]
 path = becoming-tor-translator
 label = Becoming a Tor Translator
