Squashed commit of the following:
commit 350a0c64564c016efe970dfd5efcd987626b010b
commit c01c07d2d3e3d17ed621d5de149a0b1b540b5d43
commit 9de60260bff4e62029f5ad32c98d84a1cb52ce2f
commit a4700a564e17104ae55f2a37ac3990df5a03e7cf
commit a7e082adf2d7dcd92fd1875ea08b95cada615900
commit b1338ffce818b5971b7b68949bbd46653af00f8d
commit e9592bfdc153f081709eabd1d392c7b95ad44773
commit ed9342f6be49aeee7062a727e450e3ae2e1c6557
commit 7b71df1efef48db1b9b37d44436fe7f20197e458
commit 0479b96c95e95ed566b50a02ae76b1e62220b1ac
commit 21047b53bf1f5ee8a4a526fcd6b194de35f1b4de
commit ac8c890d3fe8850e94629e595d66e9ff8cd8c817
commit c4f9dbc06cbf3677c2e7e349b40c3e509075d49c
Author: Enjeck Cleopatra <32180937+PROTechThor@users.noreply.github.com>
 Conflicts:
	databags/topics.ini
fixes: https://github.com/torproject/manual/pull/58/

--- a/databags/topics.ini
+++ b/databags/topics.ini
@@ -70,6 +70,10 @@ label = Mobile Tor
 path = mobile-tor
 label = Mobile Tor
 
+[mobile-tor]
+path = mobile-tor
+label = Mobile Tor
+
 [becoming-tor-translator]
 path = becoming-tor-translator
 label = Becoming a Tor Translator
