--- a/databags/topics.ini
+++ b/databags/topics.ini
@@ -66,6 +66,10 @@ label = Known Issues
 path = mobile-tor
 label = Mobile Tor
 
+[mobile-tor]
+path = mobile-tor
+label = Mobile Tor
+
 [becoming-tor-translator]
 path = becoming-tor-translator
 label = Becoming a Tor Translator
