--- a/databags/topics.ini
+++ b/databags/topics.ini
@@ -12,7 +12,7 @@ label = Installation
 
 [running-tor-browser]
 path = running-tor-browser
-label = Running Tor Browser for the first time
+label = Running Tor Browser for the First Time
 
 [circumvention]
 path = circumvention
@@ -24,7 +24,7 @@ label = Bridges
 
 [managing-identities]
 path = managing-identities
-label = Managing identities
+label = Managing Identities
 
 [secure-connections]
 path = secure-connections
@@ -52,7 +52,7 @@ label = Uninstalling
 
 [make-tor-portable]
 path = make-tor-portable
-label = Making Tor Browser portable
+label = Making Tor Browser Portable
 
 [troubleshooting]
 path = troubleshooting
