Fix Known issues

--- a/databags/topics.ini
+++ b/databags/topics.ini
@@ -60,7 +60,7 @@ label = Troubleshooting
 
 [known-issues]
 path = known-issues
-label = Known issues
+label = Known Issues
 
 [mobile-tor]
 path = mobile-tor
