finish configuring langs hr and hu

--- a/databags/alternatives.ini
+++ b/databags/alternatives.ini
@@ -89,7 +89,7 @@ url = /he/
 language = עברית (he)
 
 [hr]
-direction = text-right
+direction = text-left
 order = order-last
 url = /hr/
 language = hrvatski (hr)
