correct text direction, wrongly copied from hebrew config

--- a/databags/alternatives.ini
+++ b/databags/alternatives.ini
@@ -95,7 +95,7 @@ url = /hr/
 language = hrvatski (hr)
 
 [hu]
-direction = text-right
+direction = text-left
 order = order-last
 url = /hu/
 language = Magyar nyelv (hu)
