remove duplicated langs, unify the langs on all config files, add Burmese

--- a/databags/alternatives.ini
+++ b/databags/alternatives.ini
@@ -112,12 +112,6 @@ order = order-last
 url = /it/
 language = Italiano (it)
 
-[is]
-direction = text-left
-order = order-last
-url = /is/
-language = Íslenska (is)
-
 [ka]
 direction = text-left
 order = order-last
@@ -136,23 +130,29 @@ order = order-last
 language = lietuvių (lt)
 url = /lt/
 
-[ml]
-direction = text-left
-order = order-last
-language = മലയാളം  (ml)
-url = /ml/
-
 [mk]
 direction = text-left
 order = order-last
 language = македонски (mk)
 url = /mk/
 
+[ml]
+direction = text-left
+order = order-last
+language = മലയാളം  (ml)
+url = /ml/
+
 [ms]
 direction = text-left
 order = order-last
 language = Melayu (ms)
 url = /ms/
+
+[my]
+direction = text-left
+order = order-last
+language = Burmese (my)
+url = /my/
 
 [nb-NO]
 direction = text-left
@@ -177,12 +177,6 @@ direction = text-left
 order = order-last
 url = /pt-BR/
 language = Português Br. (pt-BR)
-
-[pt-PT]
-direction = text-left
-order = order-last
-url = /pt-PT/
-language = Português Port. (pt-PT)
 
 [pt-PT]
 direction = text-left
@@ -220,17 +214,17 @@ order = order-last
 url = /tr/
 language = Türkçe (tr)
 
-[vi]
-direction = text-left
-order = order-last
-url = /vi/
-language  = Tiếng Việt (vi)
-
 [uk]
 direction = text-left
 order = order-last
 url = /uk/
 language  = українська (uk)
+
+[vi]
+direction = text-left
+order = order-last
+url = /vi/
+language  = Tiếng Việt (vi)
 
 [zh-CN]
 direction = text-left
