correct name for Burmese

--- a/databags/alternatives.ini
+++ b/databags/alternatives.ini
@@ -151,7 +151,7 @@ url = /ms/
 [my]
 direction = text-left
 order = order-last
-language = Burmese (my)
+language = မြန်မာဘာသာ (my)
 url = /my/
 
 [nb-NO]
