--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,10 +1,10 @@
 image: debian:buster-slim
 
 stages:
-  - production
+  - build
 
 pages:
-  stage: production
+  stage: build
   script:
     - apt update
     - DEBIAN_FRONTEND=noninteractive apt install --no-install-recommends gettext python3-babel python3-pip git python3-inifile python3-dev python3-setuptools python3-venv python3-openssl python3-cryptography -y
