--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -6,8 +6,8 @@ stages:
 pages:
   stage: build
   script:
-    - apt update
-    - DEBIAN_FRONTEND=noninteractive apt install --no-install-recommends gettext python3-babel python3-pip git python3-inifile python3-dev python3-setuptools python3-venv python3-openssl python3-cryptography -y
+    - apt-get update
+    - DEBIAN_FRONTEND=noninteractive apt-get install --no-install-recommends gettext python3-babel python3-pip git python3-inifile python3-dev python3-setuptools python3-venv python3-openssl python3-cryptography i18nspector -y
     - pip3 install babel
     - pip3 install wheel
     - pip3 install lektor
