--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -13,10 +13,11 @@ pages:
     - pip3 install lektor
     - rm -rf i18n
     - git clone https://git.torproject.org/translation.git i18n
-    - cd i18n && git checkout tbmanual-contentspot && cd ..
+    - cd i18n && git checkout tbmanual-contentspot
+    - grep -r '] (' *.po && cd ..
     - rm -rf lego
     - git clone https://git.torproject.org/project/web/lego.git lego
-    - cd lego && git checkout origin/master && cd ..
+    - cd lego && git checkout master && git pull && cd ..
     - rm -rf public
     - lektor plugins reinstall
     - lektor build --output-path public && lektor build --output-path public
