--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -31,4 +31,5 @@ pages:
 check_l10n:
   stage: test
   script: 
-    - grep -r '] (' i18n/*.po >&2
+    - if [[ $(grep -r '] (' i18n/*.po) ]] ; then echo "TEST FAILED: broken links" && `grep -r '] (' i18n/*.po >&2` ; else echo "no broken links"; fi || true
+    - allow_failure: true
